--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -5,3 +5,7 @@
 body {
   @apply text-gray-100 bg-gray-800;
 }
+
+.custom-btn {
+  @apply inline-flex items-center px-3 py-1.5 border border-gray-300 shadow-sm font-medium rounded-full text-gray-700 bg-white hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500;
+}
